fixed vsq-38