@@ -43,6 +43,7 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
     public static final BlockPos SYNTHETIC_OPEN_POS = new BlockPos(0, -2_048, 0);
     public static final int INPUT_SLOT = EnchantingSlotLayout.INPUT_SLOT;
     public static final int TABLE_SLOT_COUNT = EnchantingSlotLayout.TABLE_SLOT_COUNT;
+    private static final int PLAYER_MAIN_SLOT_COUNT = 36;
     private static final Identifier ENCHANTABLE_TAG_ID = Identifier.fromNamespaceAndPath("vsq", "enchanting/enchantable");
     private static final Identifier MATERIAL_TAG_ID = Identifier.fromNamespaceAndPath("vsq", "enchanting/material");
     private static final TagKey<Item> ENCHANTABLE_TAG = TagKey.create(net.minecraft.core.registries.Registries.ITEM, ENCHANTABLE_TAG_ID);
@@ -122,9 +123,10 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
             stackedItemContents.accountStack(this.enchantSlots.getItem(slotIndex));
         }
         Inventory inventory = this.player.getInventory();
-        for (int slotIndex = 0; slotIndex < inventory.getContainerSize(); slotIndex++) {
+        for (int slotIndex = 0; slotIndex < PLAYER_MAIN_SLOT_COUNT; slotIndex++) {
             stackedItemContents.accountStack(inventory.getItem(slotIndex));
         }
+        stackedItemContents.accountStack(inventory.getItem(Inventory.SLOT_OFFHAND));
     }
 
     @Override
@@ -331,22 +333,31 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
             return PlacementOutcome.none();
         }
 
-        if (!this.vsq$returnInputsToInventory()) {
+        ReturnInputsResult returnResult = this.vsq$returnInputsToInventory();
+        if (!returnResult.success()) {
             return PlacementOutcome.none();
         }
 
         PlannedRecipePlacement plannedPlacement = this.vsq$planRecipePlacement(recipeHolder.value(), player.registryAccess());
-        if (!this.vsq$applyPlannedPlacement(plannedPlacement)) {
-            this.vsq$returnInputsToInventory();
+        ApplyPlacementResult applyResult = this.vsq$applyPlannedPlacement(plannedPlacement);
+        if (!applyResult.success()) {
+            ReturnInputsResult failedReturnResult = this.vsq$returnInputsToInventory();
+            if (returnResult.offhandTouched() || applyResult.offhandTouched() || failedReturnResult.offhandTouched()) {
+                this.vsq$syncPlayerInventory(player);
+            }
             return PlacementOutcome.none();
         }
 
         this.broadcastChanges();
+        if (returnResult.offhandTouched() || applyResult.offhandTouched()) {
+            this.vsq$syncPlayerInventory(player);
+        }
         this.vsq$refresh(player);
         return new PlacementOutcome(plannedPlacement.fullyPlaced(), Optional.of(recipeHolder), plannedPlacement.missingInput());
     }
 
-    private boolean vsq$returnInputsToInventory() {
+    private ReturnInputsResult vsq$returnInputsToInventory() {
+        ItemStack offhandBefore = this.player.getInventory().getItem(Inventory.SLOT_OFFHAND).copy();
         for (int slotIndex = 0; slotIndex < EnchantingSlotLayout.TABLE_SLOT_COUNT; slotIndex++) {
             ItemStack stack = this.enchantSlots.getItem(slotIndex);
             if (stack.isEmpty()) {
@@ -355,35 +366,26 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
             this.player.getInventory().placeItemBackInInventory(stack.copy(), false);
             this.enchantSlots.setItem(slotIndex, ItemStack.EMPTY);
         }
-        return true;
+        ItemStack offhandAfter = this.player.getInventory().getItem(Inventory.SLOT_OFFHAND);
+        return new ReturnInputsResult(true, !ItemStack.matches(offhandBefore, offhandAfter));
     }
 
-    private ItemStack vsq$extractExactItems(ItemStack template, int count) {
+    private ItemStack vsq$extractExactItems(PlayerItemSource source, ItemStack template, int count) {
         Inventory inventory = this.player.getInventory();
-        ItemStack extracted = ItemStack.EMPTY;
-        int remaining = count;
-        for (int slotIndex = 0; slotIndex < inventory.getContainerSize(); slotIndex++) {
-            ItemStack stack = inventory.getItem(slotIndex);
+        if (source.kind() == PlayerItemSourceKind.MAIN_INVENTORY || source.kind() == PlayerItemSourceKind.OFFHAND) {
+            ItemStack stack = inventory.getItem(source.slotIndex());
             if (!ItemStack.isSameItemSameComponents(stack, template)) {
-                continue;
+                return ItemStack.EMPTY;
             }
 
-            int taken = Math.min(remaining, stack.getCount());
-            if (taken <= 0) {
-                continue;
+            int taken = Math.min(count, stack.getCount());
+            if (taken != count) {
+                return ItemStack.EMPTY;
             }
 
-            ItemStack split = stack.split(taken);
-            if (extracted.isEmpty()) {
-                extracted = split;
-            } else {
-                extracted.grow(split.getCount());
-            }
-            remaining -= taken;
-            if (remaining == 0) {
-                extracted.setCount(count);
-                return extracted;
-            }
+            ItemStack extracted = stack.split(taken);
+            extracted.setCount(count);
+            return extracted;
         }
         return ItemStack.EMPTY;
     }
@@ -556,22 +558,22 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
         }
 
         List<AvailableStackGroup> availableStacks = new ArrayList<>();
-        this.vsq$accountAvailableStacks(availableStacks, this.player.getInventory()::getItem, this.player.getInventory().getContainerSize());
+        this.vsq$accountAvailablePlayerStacks(availableStacks);
         this.vsq$accountAvailableStacks(availableStacks, this.enchantSlots::getItem, EnchantingSlotLayout.TABLE_SLOT_COUNT);
 
-        ItemStack[] plannedSlots = new ItemStack[EnchantingSlotLayout.TABLE_SLOT_COUNT];
-        Arrays.fill(plannedSlots, ItemStack.EMPTY);
+        PlannedSlotPlacement[] plannedSlots = new PlannedSlotPlacement[EnchantingSlotLayout.TABLE_SLOT_COUNT];
+        Arrays.fill(plannedSlots, PlannedSlotPlacement.EMPTY);
         PlannedRecipePlacement bestPlacement = this.vsq$planRequirements(requirements, 0, availableStacks, plannedSlots, recipe, registries, null);
         return bestPlacement == null ? PlannedRecipePlacement.empty(recipe, recipe.inputIngredient(registries)) : bestPlacement;
     }
 
-    private PlannedRecipePlacement vsq$planRequirements(List<SlotRequirement> requirements, int requirementIndex, List<AvailableStackGroup> availableStacks, ItemStack[] plannedSlots, EnchantingRecipe recipe, net.minecraft.core.HolderLookup.Provider registries, PlannedRecipePlacement bestPlacement) {
+    private PlannedRecipePlacement vsq$planRequirements(List<SlotRequirement> requirements, int requirementIndex, List<AvailableStackGroup> availableStacks, PlannedSlotPlacement[] plannedSlots, EnchantingRecipe recipe, net.minecraft.core.HolderLookup.Provider registries, PlannedRecipePlacement bestPlacement) {
         if (requirementIndex >= requirements.size()) {
             EnchantingRecipeInput plannedInput = this.vsq$plannedInput(plannedSlots);
             PlannedRecipePlacement candidate = PlannedRecipePlacement.fromPlacedInput(
                     recipe,
                     requirements.getFirst().ingredient(),
-                    plannedInput,
+                    plannedSlots,
                     recipe.findMatch(plannedInput, registries).isPresent()
                             && recipe.isBelowMaximumEnchantmentLevel(plannedInput, registries)
                             && recipe.wouldModifyInput(plannedInput, registries)
@@ -601,9 +603,9 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
             }
 
             availableStack.remove(placedCount);
-            plannedSlots[requirement.slotIndex()] = candidate;
+            plannedSlots[requirement.slotIndex()] = new PlannedSlotPlacement(candidate, availableStack.source());
             currentBest = this.vsq$planRequirements(requirements, requirementIndex + 1, availableStacks, plannedSlots, recipe, registries, currentBest);
-            plannedSlots[requirement.slotIndex()] = ItemStack.EMPTY;
+            plannedSlots[requirement.slotIndex()] = PlannedSlotPlacement.EMPTY;
             availableStack.add(placedCount);
         }
 
@@ -617,52 +619,102 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
                 && recipe.respectsVanillaEnchantmentIncompatibilities(candidateInput, registries);
     }
 
+    private void vsq$accountAvailablePlayerStacks(List<AvailableStackGroup> availableStacks) {
+        Inventory inventory = this.player.getInventory();
+        for (int slotIndex = 0; slotIndex < PLAYER_MAIN_SLOT_COUNT; slotIndex++) {
+            this.vsq$accountAvailableStack(availableStacks, inventory.getItem(slotIndex), new PlayerItemSource(PlayerItemSourceKind.MAIN_INVENTORY, slotIndex));
+        }
+        this.vsq$accountAvailableStack(availableStacks, inventory.getItem(Inventory.SLOT_OFFHAND), new PlayerItemSource(PlayerItemSourceKind.OFFHAND, Inventory.SLOT_OFFHAND));
+    }
+
     private void vsq$accountAvailableStacks(List<AvailableStackGroup> availableStacks, java.util.function.IntFunction<ItemStack> slotReader, int slotCount) {
         for (int slotIndex = 0; slotIndex < slotCount; slotIndex++) {
-            ItemStack stack = slotReader.apply(slotIndex);
-            if (stack.isEmpty()) {
-                continue;
-            }
-            AvailableStackGroup existing = availableStacks.stream()
-                    .filter(group -> ItemStack.isSameItemSameComponents(group.prototype(), stack))
-                    .findFirst()
-                    .orElse(null);
-            if (existing != null) {
-                existing.add(stack.getCount());
-            } else {
-                availableStacks.add(new AvailableStackGroup(stack.copyWithCount(1), stack.getCount()));
-            }
+            this.vsq$accountAvailableStack(availableStacks, slotReader.apply(slotIndex), PlayerItemSource.TABLE);
         }
     }
 
-    private EnchantingRecipeInput vsq$plannedInput(ItemStack[] plannedSlots) {
+    private void vsq$accountAvailableStack(List<AvailableStackGroup> availableStacks, ItemStack stack, PlayerItemSource source) {
+        if (stack.isEmpty()) {
+            return;
+        }
+        AvailableStackGroup existing = availableStacks.stream()
+                .filter(group -> group.source() == source && ItemStack.isSameItemSameComponents(group.prototype(), stack))
+                .findFirst()
+                .orElse(null);
+        if (existing != null) {
+            existing.add(stack.getCount());
+        } else {
+            availableStacks.add(new AvailableStackGroup(stack.copyWithCount(1), stack.getCount(), source));
+        }
+    }
+
+    private EnchantingRecipeInput vsq$plannedInput(PlannedSlotPlacement[] plannedSlots) {
         return new EnchantingRecipeInput(
-                plannedSlots[EnchantingSlotLayout.INPUT_SLOT].copy(),
-                plannedSlots[EnchantingSlotLayout.MATERIAL_SLOT].copy(),
+                plannedSlots[EnchantingSlotLayout.INPUT_SLOT].stack().copy(),
+                plannedSlots[EnchantingSlotLayout.MATERIAL_SLOT].stack().copy(),
                 List.of(
-                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT].copy(),
-                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 1].copy(),
-                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 2].copy(),
-                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 3].copy()
+                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT].stack().copy(),
+                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 1].stack().copy(),
+                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 2].stack().copy(),
+                        plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 3].stack().copy()
                 )
         );
     }
 
-    private boolean vsq$applyPlannedPlacement(PlannedRecipePlacement plannedPlacement) {
-        for (int slotIndex = 0; slotIndex < plannedPlacement.slotStacks().size(); slotIndex++) {
-            ItemStack plannedStack = plannedPlacement.slotStacks().get(slotIndex);
+    private ApplyPlacementResult vsq$applyPlannedPlacement(PlannedRecipePlacement plannedPlacement) {
+        List<RestorableExtraction> extractedStacks = new ArrayList<>(plannedPlacement.slotPlacements().size());
+        boolean offhandTouched = false;
+        for (int slotIndex = 0; slotIndex < plannedPlacement.slotPlacements().size(); slotIndex++) {
+            PlannedSlotPlacement plannedSlot = plannedPlacement.slotPlacements().get(slotIndex);
+            ItemStack plannedStack = plannedSlot.stack();
             if (plannedStack.isEmpty()) {
                 this.enchantSlots.setItem(slotIndex, ItemStack.EMPTY);
                 continue;
             }
 
-            ItemStack extracted = this.vsq$extractExactItems(plannedStack, plannedStack.getCount());
+            ItemStack extracted = this.vsq$extractExactItems(plannedSlot.source(), plannedStack, plannedStack.getCount());
             if (extracted.isEmpty() || extracted.getCount() != plannedStack.getCount()) {
-                return false;
+                this.vsq$rollbackPlannedPlacement(extractedStacks);
+                for (int revertIndex = 0; revertIndex < slotIndex; revertIndex++) {
+                    this.enchantSlots.setItem(revertIndex, ItemStack.EMPTY);
+                }
+                return new ApplyPlacementResult(false, offhandTouched);
             }
             this.enchantSlots.setItem(slotIndex, extracted);
+            extractedStacks.add(new RestorableExtraction(plannedSlot.source(), extracted.copy()));
+            if (plannedSlot.source().kind() == PlayerItemSourceKind.OFFHAND) {
+                offhandTouched = true;
+            }
         }
-        return true;
+        return new ApplyPlacementResult(true, offhandTouched);
+    }
+
+    private void vsq$rollbackPlannedPlacement(List<RestorableExtraction> extractedStacks) {
+        for (int index = extractedStacks.size() - 1; index >= 0; index--) {
+            RestorableExtraction extracted = extractedStacks.get(index);
+            this.vsq$restoreExtractedItems(extracted.source(), extracted.stack());
+        }
+    }
+
+    private void vsq$restoreExtractedItems(PlayerItemSource source, ItemStack stack) {
+        if (stack.isEmpty()) {
+            return;
+        }
+
+        Inventory inventory = this.player.getInventory();
+        ItemStack target = inventory.getItem(source.slotIndex());
+        if (target.isEmpty()) {
+            inventory.setItem(source.slotIndex(), stack.copy());
+            return;
+        }
+        if (ItemStack.isSameItemSameComponents(target, stack)) {
+            target.grow(stack.getCount());
+        }
+    }
+
+    private void vsq$syncPlayerInventory(ServerPlayer player) {
+        player.getInventory().setChanged();
+        player.inventoryMenu.broadcastChanges();
     }
 
     public List<Slot> vsq$getEnchantingSlots() {
@@ -676,13 +728,29 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
     private record SlotRequirement(int slotIndex, EnchantingIngredient ingredient) {
     }
 
+    private enum PlayerItemSourceKind {
+        MAIN_INVENTORY,
+        OFFHAND,
+        TABLE
+    }
+
+    private record PlayerItemSource(PlayerItemSourceKind kind, int slotIndex) {
+        private static final PlayerItemSource TABLE = new PlayerItemSource(PlayerItemSourceKind.TABLE, -1);
+    }
+
+    private record PlannedSlotPlacement(ItemStack stack, PlayerItemSource source) {
+        private static final PlannedSlotPlacement EMPTY = new PlannedSlotPlacement(ItemStack.EMPTY, PlayerItemSource.TABLE);
+    }
+
     private static final class AvailableStackGroup {
         private final ItemStack prototype;
         private int count;
+        private final PlayerItemSource source;
 
-        private AvailableStackGroup(ItemStack prototype, int count) {
+        private AvailableStackGroup(ItemStack prototype, int count, PlayerItemSource source) {
             this.prototype = prototype;
             this.count = count;
+            this.source = source;
         }
 
         public ItemStack prototype() {
@@ -691,6 +759,10 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
 
         public int count() {
             return this.count;
+        }
+
+        public PlayerItemSource source() {
+            return this.source;
         }
 
         public void remove(int amount) {
@@ -702,14 +774,33 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
         }
     }
 
+    private record ReturnInputsResult(boolean success, boolean offhandTouched) {
+    }
+
+    private record ApplyPlacementResult(boolean success, boolean offhandTouched) {
+    }
+
+    private record RestorableExtraction(PlayerItemSource source, ItemStack stack) {
+    }
+
     public record PlacementOutcome(boolean fullyPlaced, Optional<RecipeHolder<EnchantingRecipe>> recipeHolder, EnchantingRecipeInput missingInput) {
         public static PlacementOutcome none() {
             return new PlacementOutcome(false, Optional.empty(), EnchantingRecipeInput.EMPTY);
         }
     }
 
-    private record PlannedRecipePlacement(EnchantingRecipeInput input, EnchantingRecipeInput missingInput, List<ItemStack> slotStacks, int placedTotal, boolean fullyPlaced) {
-        private static PlannedRecipePlacement fromPlacedInput(EnchantingRecipe recipe, EnchantingIngredient inputIngredient, EnchantingRecipeInput placedInput, boolean fullyPlaced) {
+    private record PlannedRecipePlacement(EnchantingRecipeInput input, EnchantingRecipeInput missingInput, List<PlannedSlotPlacement> slotPlacements, int placedTotal, int offhandPlacedTotal, boolean fullyPlaced) {
+        private static PlannedRecipePlacement fromPlacedInput(EnchantingRecipe recipe, EnchantingIngredient inputIngredient, PlannedSlotPlacement[] plannedSlots, boolean fullyPlaced) {
+            EnchantingRecipeInput placedInput = new EnchantingRecipeInput(
+                    plannedSlots[EnchantingSlotLayout.INPUT_SLOT].stack().copy(),
+                    plannedSlots[EnchantingSlotLayout.MATERIAL_SLOT].stack().copy(),
+                    List.of(
+                            plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT].stack().copy(),
+                            plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 1].stack().copy(),
+                            plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 2].stack().copy(),
+                            plannedSlots[EnchantingSlotLayout.FIRST_CROSS_SLOT + 3].stack().copy()
+                    )
+            );
             EnchantingRecipeInput missingInput = new EnchantingRecipeInput(
                     vsq$missingStack(inputIngredient, placedInput.input()),
                     vsq$missingStack(recipe.material(), placedInput.material()),
@@ -723,30 +814,33 @@ public class VSQEnchantmentMenu extends RecipeBookMenu implements VSQEnchantment
             return new PlannedRecipePlacement(
                     placedInput,
                     missingInput,
-                    List.of(
-                            placedInput.input().copy(),
-                            placedInput.material().copy(),
-                            placedInput.ingredients().get(0).copy(),
-                            placedInput.ingredients().get(1).copy(),
-                            placedInput.ingredients().get(2).copy(),
-                            placedInput.ingredients().get(3).copy()
-                    ),
+                    List.copyOf(Arrays.asList(plannedSlots.clone())),
                     placedInput.input().getCount()
                             + placedInput.material().getCount()
                             + placedInput.ingredients().stream().mapToInt(ItemStack::getCount).sum(),
+                    Arrays.stream(plannedSlots)
+                            .filter(placement -> placement.source().kind() == PlayerItemSourceKind.OFFHAND)
+                            .map(PlannedSlotPlacement::stack)
+                            .mapToInt(ItemStack::getCount)
+                            .sum(),
                     fullyPlaced
             );
         }
 
         private static PlannedRecipePlacement empty(EnchantingRecipe recipe, EnchantingIngredient inputIngredient) {
-            return fromPlacedInput(recipe, inputIngredient, EnchantingRecipeInput.EMPTY, false);
+            PlannedSlotPlacement[] emptySlots = new PlannedSlotPlacement[EnchantingSlotLayout.TABLE_SLOT_COUNT];
+            Arrays.fill(emptySlots, PlannedSlotPlacement.EMPTY);
+            return fromPlacedInput(recipe, inputIngredient, emptySlots, false);
         }
 
         private boolean isBetterThan(PlannedRecipePlacement other) {
             if (this.fullyPlaced != other.fullyPlaced) {
                 return this.fullyPlaced;
             }
-            return this.placedTotal > other.placedTotal;
+            if (this.placedTotal != other.placedTotal) {
+                return this.placedTotal > other.placedTotal;
+            }
+            return this.offhandPlacedTotal < other.offhandPlacedTotal;
         }
     }
 
